WIP: first pass refactor