@@ -18,11 +18,15 @@ package com.embabel.database.agent;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.util.Collections;
+import java.util.Map;
 
 import com.embabel.agent.api.common.autonomy.AgentInvocation;
 import com.embabel.database.agent.domain.*;
+import com.embabel.database.core.repository.ModelRepository;
+import com.embabel.database.core.repository.util.ModelRepositoryLoader;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -35,8 +39,7 @@ import com.embabel.agent.domain.io.UserInput;
 @SpringBootTest(classes={ModelSuggestionAgentITest.class, AgentConfigurationSupport.class}, properties = {
         "spring.ai.bedrock.aws.region=us-east-1",
         "spring.ai.model.chat=ollama",
-        "aws.accessKeyId=key",
-        "aws.secretAccessKey=secret"
+        "embabel.models.default-llm=us.anthropic.claude-3-5-sonnet-20240620-v1:0"
 })
 public class ModelSuggestionAgentITest {
 
@@ -45,10 +48,23 @@ public class ModelSuggestionAgentITest {
     @Autowired
     AgentPlatform agentPlatform;
 
+    @Autowired
+    ModelRepository modelRepository;
+
+    @Autowired
+    ModelRepositoryLoader modelRepositoryLoader;
+
+    @BeforeEach
+    void before() {
+        modelRepository.deleteAll();
+        //load
+        modelRepositoryLoader.loadFromFile("./json/export.json");
+    }
+
     @Test
     void testGetSuggestedTagList() throws Exception {
         // String userInputText = "find a model that can extract text from an image";
-        String userInputText = "I want a model that will create an image from text";
+        String userInputText = "I want a model that will transcribe video";
         UserInput userInput = new UserInput(userInputText);
 
         //get the invocation
@@ -56,9 +72,7 @@ public class ModelSuggestionAgentITest {
         //invoke
         AgentProcess agentProcess = modelProvidersAgentInvocation.run(Collections.singletonMap("userInput",userInput));
         while (!agentProcess.getFinished()) {
-//
-//        while (agentProcess.getStatus().equals(AgentProcessStatusCode.RUNNING) || agentProcess.getStatus().equals(AgentProcessStatusCode.WAITING)) {
-//            //still waiting
+            //wait
             Thread.sleep(500);//wait 500ms
         }//end while
 
@@ -83,104 +97,11 @@ public class ModelSuggestionAgentITest {
 
         userInput = new UserInput("deepinfra");
 
-//        CompletableFuture<ModelSuggestion> modelSuggestionCompletableFuture = modelSuggestionAgentInvocation.invokeAsync(Collections.singletonMap("userInput",userInput));
-        ModelSuggestion modelSuggestion = modelSuggestionAgentInvocation.invoke(Collections.singletonMap("userInput",userInput));
+        ModelSuggestion modelSuggestion = modelSuggestionAgentInvocation.invoke(Map.of("userInput",userInput,"previousPrompt",userInputText));
 
         logger.info("final message " + modelSuggestion.message());
         logger.info("final suggestion " + modelSuggestion.listModels());
 
-
-//        modelSuggestionCompletableFuture.thenAccept(modelSuggestion -> {
-//            logger.info("final message " + modelSuggestion.message());
-//            logger.info("final suggestion " + modelSuggestion.listModelMetadata());
-//        });
-
-//        ModelProviders providers = modelProvidersAgentInvocation.invoke(Collections.singletonMap("userInput",userInput));
-        //now that we have the providers, invoke the second model
-//        AgentInvocation<ModelSuggestion> modelSuggestionAgentInvocation = AgentInvocation.builder(agentPlatform).build(ModelSuggestion.class);
-        //setup the context
-
-
-//
-//        //get the agent execution environment
-//        AgentPlatform agentFactory = applicationContext.getBean(AgentPlatform.class);
-//        //get the agent
-//        Agent agent = null;
-//        List<Agent> agents = agentFactory.agents();
-//        for (Agent a : agents) {
-//            logger.info("Agent Name: " + a.getName());
-//            if (a.getName().equals("ModelProviderSuggestionAgent")) {
-//                logger.info("Matched " + a.getName());
-//                //this is the one
-//                agent = a;
-//                break;
-//            } //end if
-//        } //end for
-//        assertNotNull(agent);
-//        //load up the repository for testing
-//        InMemoryAiModelRepository repository = applicationContext.getBean(InMemoryAiModelRepository.class);
-//        repository.load();//invoke the load
-//        //execute
-//        AgentProcess agentProcess = agentFactory.createAgentProcess(agent, ProcessOptions.DEFAULT, Collections.singletonMap("userInput", userInput));
-//        //get the id
-//        String id = agentProcess.getId();
-//        logger.info(id);
-//        //invoke
-//        agentProcess.run();
-//        //check
-//        while (agentProcess.getStatus().equals(AgentProcessStatusCode.RUNNING) || agentProcess.getStatus().equals(AgentProcessStatusCode.WAITING)) {
-//            //still waiting
-//            Thread.sleep(500);//wait 500ms
-//        }//end while
-//        //use getObjects to get the history
-//        Object result = agentProcess.lastResult();
-//        assertNotNull(result);
-//        logger.info(result);
-//        //should be able to get the history and invoke a second agent
-//        Optional<Object> list = agentProcess.spawn()
-//            .getObjects()
-//            .stream()
-//            .filter(obj -> obj.getClass().isAssignableFrom(ListModelMetadata.class))
-//            .findFirst();
-//        assertTrue(list.isPresent());
-//        //now pull the model list from the prompt
-//        ListModelMetadata listModelMetadata = (ListModelMetadata) list.get();
-//        assertNotNull(listModelMetadata);
-//        //can reuse this in the next prompt --> lets use 'deepinfra'
-//        String selectedProvider = "deepinfra";
-//        //check its there
-//        assertTrue(result.toString().contains(selectedProvider));
-//        //update the user input with the full context
-//        StringBuilder stringBuilder = new StringBuilder();
-//        //now use this to invoke the ModelSuggestionAgent
-//        for (Agent a : agents) {
-//            logger.info("Agent Name: " + a.getName());
-//            if (a.getName().equals("ModelSuggestionAgent")) {
-//                logger.info("Matched " + a.getName());
-//                //this is the one
-//                agent = a;
-//                break;
-//            } //end if
-//        } //end for
-//        userInput = new UserInput(selectedProvider);
-//        //build the context
-//        Map<String,Object> contextMap = new HashMap<>();
-//        contextMap.put("userInput",userInput);
-//        contextMap.put("listModelMetadata",listModelMetadata);
-//        agentProcess = agentFactory.createAgentProcess(agent, ProcessOptions.DEFAULT, contextMap);
-//        //get the id
-//        id = agentProcess.getId();
-//        logger.info(id);
-//        //invoke
-//        agentProcess.run();
-//        //check
-//        while (agentProcess.getStatus().equals(AgentProcessStatusCode.RUNNING) || agentProcess.getStatus().equals(AgentProcessStatusCode.WAITING)) {
-//            //still waiting
-//            Thread.sleep(500);//wait 500ms
-//        }//end while
-//        result = agentProcess.lastResult();
-//        assertNotNull(result);
-//        logger.info(result);
     }
 
 
